--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         
         <div class="links">
-            <a href="/no-moats" class="link">there are no moats</a>
+            <a href="/nomoats.html" class="link">there are no moats</a>
             <a href="/daily-affirmation" class="link">daily affirmation</a>
         </div>
     </div>
