--- a/nomoats.html
+++ b/nomoats.html
@@ -140,7 +140,7 @@ And hear this if nothing else. There are no moats, every piece of software start
         </div>
         
         <div class="home-link">
-            <a href="index.html">return home</a>
+            <a href="/">return home</a>
         </div>
     </div>
 </body>
