--- a/nomoats.html
+++ b/nomoats.html
@@ -97,6 +97,15 @@
         }
     </style>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JV3VZLKY0X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JV3VZLKY0X');
+</script>
 <body>
     <div class="container">
         <div class="header">
