--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         
         <div class="links">
             <a href="/nomoats.html" class="link">there are no moats</a>
+	    <a href="/nohumans.html" class="link">there are no humans (epilepsy warning)</a>
             <!-- <a href="/daily-affirmation" class="link">daily affirmation</a> -->
         </div>
     </div>
